# TodoList-project

./: .gitignore  WARP.md  main.py  pyproject.toml  requirements.txt  todo.sql
dashboard/src/: App.css  App.tsx
