[project]
name = "automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "fastapi>=0.123.0",
    "keyboard>=0.13.5",
    "pandas>=2.3.3",
    "prettytable>=3.17.0",
    "pychalk>=2.0.1",
    "pywinauto>=0.6.9",
    "typer>=0.20.0",
]
